# llmeter

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pypi.yml
docs/: index.md  serialization.md
docs/overrides/: main.html
docs/reference/: experiments.md  index.md  json_utils.md  prompt_utils.md  quantile_ci.md  results.md  runner.md  s3fs.md  tokenizers.md  utils.md
docs/reference/callbacks/: base.md  cost.md  index.md  mlflow.md  profiling.md  system_metrics.md
docs/reference/callbacks/cost/: dimensions.md  index.md  model.md  results.md  serde.md
docs/reference/callbacks/cost/providers/: index.md  sagemaker.md
docs/reference/endpoints/: anthropic_messages.md  base.md  bedrock.md  bedrock_invoke.md  index.md  litellm.md  openai.md  openai_response.md  sagemaker.md
docs/reference/plotting/: defaults.md  index.md  percentage.md  profiling.md
docs/stylesheets/: extra.css
docs/user_guide/: connect_endpoints.md  installation.md  key_concepts.md  metrics.md  plotting.md  quantile_confidence.md  run_experiments.md  s3_storage.md
docs/user_guide/callbacks/: cache_buster.md  cost.md  index.md  mlflow.md
docs/user_guide/connect_endpoints/: index.md
docs/user_guide/custom_analytics/: index.md
docs/user_guide/run_experiments/: index.md
examples/: Compare TTFT - Converse vs Anthropic Messages API on Amazon Bedrock.ipynb  Compare load tests.ipynb  Duration-based runs - backlog progress UI.ipynb  Extended thinking latency.ipynb  LLMeter with Amazon Bedrock.ipynb  LLMeter with Amazon SageMaker JumpStart.ipynb  LLMeter with OpenAI Response API on Bedrock.ipynb  Load testing.ipynb  MaryShelleyFrankenstein.txt  Model Costs.ipynb  Profiling.ipynb  Prompt caching latency.ipynb  TPOT_comparison.ipynb  TTFT_comparison.ipynb  Time-bound runs with Bedrock OpenAI API.ipynb
llmeter/: __init__.py  experiments.py  json_utils.py  live_display.py  plotting.py  prompt_utils.py  quantile_ci.py  results.py  runner.py  s3fs.py  serde.py  serialization.py  tokenizers.py  utils.py
llmeter/callbacks/: __init__.py  base.py  mlflow.py  profiling.py  system_metrics.py
llmeter/callbacks/cost/: __init__.py  dimensions.py  model.py  results.py  serde.py
llmeter/callbacks/cost/providers/: __init__.py  sagemaker.py
llmeter/endpoints/: __init__.py  anthropic_messages.py  base.py  bedrock.py  bedrock_invoke.py  litellm.py  openai.py  openai_response.py  sagemaker.py
llmeter/plotting/: __init__.py  defaults.py  heatmap.py  percentage.py  plotting.py  profiling.py
tests/: README.md  test_endpoints.py  test_experiments.py  test_file_output.py  test_plotting.py  test_quantile_ci.py  test_results.py  test_runner.py  test_s3fs.py  test_sagemaker.py  test_tokenizers.py  test_utils.py  test_utils_ci_gating.py
tests/callbacks/: test_base.py  test_mlflow.py
tests/callbacks/cost/: test_dimensions.py  test_model.py  test_results.py
tests/callbacks/cost/providers/: test_sagemaker.py
tests/endpoints/: test_bedrock.py  test_bedrock_invoke.py  test_endpoints.py  test_litellm.py  test_openai.py
tests/integ/: README.md  __init__.py  conftest.py  test_anthropic_messages_bedrock.py  test_bedrock_converse.py  test_bedrock_converse_reasoning.py  test_bedrock_error_handling.py  test_bedrock_invoke.py  test_error_handling.py  test_openai_bedrock.py  test_openai_completion_reasoning.py  test_openai_response_bedrock.py  test_openai_response_endpoint.py  test_openai_response_reasoning.py  test_response_bedrock.py  test_response_endpoint.py  test_s3fs_integ.py
tests/integ/callbacks/: test_mlflow_serialization.py
tests/integ/callbacks/cost/providers/: test_sagemaker_integ.py
tests/unit/: test_experiments.py  test_file_output.py  test_interrupted_run.py  test_invocation_response.py  test_invocation_response_integration.py  test_lazy_load.py  test_live_display.py  test_load_test_plotting.py  test_prompt_utils.py  test_property_save_load.py  test_property_simple.py  test_results.py  test_runner.py  test_runner_backlog_ui.py  test_running_stats.py  test_serialization_properties.py  test_tokenizers.py
tests/unit/callbacks/: test_base.py  test_mlflow.py  test_profiling.py  test_system_metrics.py
tests/unit/callbacks/cost/: test_dimensions.py  test_model.py
tests/unit/callbacks/cost/providers/: test_sagemaker.py
tests/unit/endpoints/: test_anthropic_messages.py  test_bedrock.py  test_bedrock_invoke.py  test_bedrock_multimodal.py  test_bedrock_reasoning.py  test_endpoints.py  test_invocation_response_serialization.py  test_litellm.py  test_llmeter_invoke.py  test_multimodal_properties.py  test_multimodal_serialization.py  test_multimodal_utilities.py  test_openai.py  test_openai_multimodal.py  test_openai_response.py  test_openai_response_error_handling.py  test_openai_response_format.py  test_openai_response_model_params.py  test_openai_response_parse_payload.py  test_openai_response_properties.py  test_openai_response_reasoning.py  test_openai_response_serialization.py  test_property_bedrock.py  test_property_llmeter_invoke.py  test_sagemaker.py  test_sagemaker_multimodal.py
