[tool.poetry]
name = "llmeter"
# Note: version is automatically set from tag name in our GitHub CD release workflow
version = "0.0.0"
description = "A lightweight, cross-platform latency and throughput profiler for LLMs"
authors = ["Amazon Web Services"]
readme = "README.md"
keywords = ["llm", "genai", "testing", "performance"]
license = "Apache-2.0"
maintainers = ["llmeter-maintainers <llmeter-maintainers@amazon.com>"]
repository = "https://github.com/awslabs/llmeter"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
tqdm = ">=4.66.0"
jmespath = ">=0.7.1,<2.0.0"
boto3 = ">=1.34.129"
universal-pathlib = ">=0.2.1"
fsspec = { extras = ["http", "s3"], version = ">=2023.6.0" }
seaborn = { version = ">=0.13.2", optional = true }
openai = { version = ">=1.35.1", optional = true }
litellm = { version = ">=1.47.1", optional = true }
plotly = { version = "^5.24.1", optional = true }

[tool.poetry.group.dev.dependencies]
boto3-stubs = { extras = [
    "bedrock",
    "bedrock-runtime",
    "essential",
    "sagemaker"
], version = "^1.35.24" }
ipykernel = "^6.29.0"
ipywidgets = "^8.1.3"
transformers = "^4.40.2"
sagemaker = "^2.224.0"
ruff = "^0.6.5"
tiktoken = "^0.7.0"
nbformat = "^5.10.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
bandit = "^1.7.10"
moto = { extras = [
    "bedrock-runtime",
    "sagemaker-runtime"
], version = "^5.0.16" }
pytest-reportlog = "^0.4.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
all = ["seaborn", "openai", "litellm"]
plotting = ["plotly"]
openai = ["openai"]
litellm = ["litellm"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]
collect_ignore = ["test_experiments.py"]

[tool.bandit]
exclude_dirs = ["tests"]
targets = ["llmeter"]
