[project]
name = "llmeter"
# Note: version is automatically set from tag name in our GitHub CD release workflow
version = "0.0.0"
description = "A lightweight, cross-platform latency and throughput profiler for LLMs"
authors = [{ name = "Amazon Web Services" }]
readme = "README.md"
keywords = ["llm", "genai", "testing", "performance"]
license = { text = "Apache-2.0" }
maintainers = [{ name = "llmeter-maintainers", email = "llmeter-maintainers@amazon.com" }]
requires-python = ">=3.10,<4"
dependencies = [
    "tqdm>=4.66.0",
    "jmespath>=0.7.1,<2.0.0",
    "boto3>=1.34.129",
    "universal-pathlib>=0.2.1",
    "fsspec[http,s3]>=2023.6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.91.0"]
openai = ["openai>=1.35.1"]
litellm = ["litellm>=1.47.1"]
plotting = ["plotly>=5.24.1", "kaleido<=0.2.1", "pandas>=2.2.0"]
mlflow = ["mlflow-skinny>=3.10.0"]
multimodal = ["puremagic>=1.28"]
tokenizers = ["transformers>=4.40.2", "tiktoken>=0.7.0"]
all = [
    "llmeter[anthropic,openai,litellm,plotting,mlflow,multimodal,tokenizers]",
]

[project.urls]
Repository = "https://github.com/awslabs/llmeter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "boto3-stubs[bedrock,bedrock-runtime,essential,sagemaker,sagemaker-runtime]>=1.35.24",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.3",
    "sagemaker>=2.224.0",
    "ruff>=0.6.5",
    "nbformat>=5.10.4",
    "bandit>=1.7.10",
    "aws-bedrock-token-generator>=1.1.0",
]
docs = [
    "mkdocstrings[python]>=0.26.1",
    "zensical>=0.0.29",
]
test = [
    "hypothesis>=6.151.9",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "moto>=5.0.16",
    "pytest-reportlog>=0.4.0",
    "pytest-cov>=5.0.0",
    "pillow>=12.1.1",
    "aws-bedrock-token-generator>=1.1.0",
    # Pull in all optional dependencies for comprehensive testing
    "llmeter[all]",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integ: marks tests as integration tests (enabled by default, disabled in CI)"
]

[tool.bandit]
exclude_dirs = ["tests"]
targets = ["llmeter"]
